--- a/src/grapejuice_common/assets/glade/grapejuice.glade
+++ b/src/grapejuice_common/assets/glade/grapejuice.glade
@@ -21,7 +21,13 @@
     <signal name="close" handler="close_about" swapped="no"/>
     <signal name="response" handler="close_about" swapped="no"/>
     <child type="titlebar">
-      <placeholder/>
+      <object class="GtkHeaderBar">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <child>
+          <placeholder/>
+        </child>
+      </object>
     </child>
     <child internal-child="vbox">
       <object class="GtkBox">
