Save fast flags

--- a/src/grapejuice_common/assets/glade/fast_flag_editor.glade
+++ b/src/grapejuice_common/assets/glade/fast_flag_editor.glade
@@ -70,7 +70,27 @@
         <property name="show_close_button">True</property>
         <property name="decoration_layout">menu:minimize,maximize,close</property>
         <child>
-          <placeholder/>
+          <object class="GtkBox">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <child>
+              <placeholder/>
+            </child>
+            <child>
+              <object class="GtkButton" id="save_flags_to_studio">
+                <property name="label" translatable="yes">Save</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <signal name="clicked" handler="save_flags_to_studio" swapped="no"/>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+          </object>
         </child>
       </object>
     </child>
