--- a/src/grapejuice_common/assets/glade/fast_flag_editor.glade
+++ b/src/grapejuice_common/assets/glade/fast_flag_editor.glade
@@ -63,7 +63,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkScrolledWindow">
+          <object class="GtkScrolledWindow" id="fast_flag_scroll">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="vexpand">True</property>
