Add flag reset button

--- a/src/grapejuice_common/assets/glade/fast_flag_editor.glade
+++ b/src/grapejuice_common/assets/glade/fast_flag_editor.glade
@@ -19,15 +19,27 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <child>
-              <placeholder/>
-            </child>
-            <child>
               <object class="GtkButton" id="save_flags_to_studio">
                 <property name="label" translatable="yes">Save</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <signal name="clicked" handler="save_flags_to_studio" swapped="no"/>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton">
+                <property name="label" translatable="yes">Reset flags</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="margin_left">10</property>
+                <signal name="clicked" handler="reset_all_flags" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
