--- a/src/grapejuice_common/assets/glade/fast_flag_editor.glade
+++ b/src/grapejuice_common/assets/glade/fast_flag_editor.glade
@@ -3,6 +3,8 @@
 <interface>
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkWindow" id="fast_flag_editor">
+    <property name="width_request">800</property>
+    <property name="height_request">530</property>
     <property name="can_focus">False</property>
     <property name="window_position">center</property>
     <property name="default_width">550</property>
