--- a/src/grapejuice_common/assets/glade/fast_flag_editor.glade
+++ b/src/grapejuice_common/assets/glade/fast_flag_editor.glade
@@ -126,6 +126,12 @@
       </object>
     </child>
   </object>
+  <object class="GtkImage" id="icon_fflag_reset_button">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="margin_left">5</property>
+    <property name="stock">gtk-undo</property>
+  </object>
   <object class="GtkBox" id="fast_flag_row">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -175,15 +181,53 @@
       </packing>
     </child>
     <child>
-      <object class="GtkBox" id="fast_flag_widgets">
+      <object class="GtkBox">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="halign">start</property>
+        <property name="valign">center</property>
         <property name="hexpand">True</property>
+        <property name="vexpand">False</property>
+        <property name="spacing">10</property>
         <child>
-          <placeholder/>
+          <object class="GtkBox" id="fast_flag_widgets">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="valign">center</property>
+            <property name="hexpand">True</property>
+            <property name="vexpand">False</property>
+            <child>
+              <placeholder/>
+            </child>
+            <child>
+              <placeholder/>
+            </child>
+            <child>
+              <placeholder/>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">0</property>
+          </packing>
         </child>
         <child>
-          <placeholder/>
+          <object class="GtkButton" id="fflag_reset_button">
+            <property name="label" translatable="yes">Reset</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">True</property>
+            <property name="valign">center</property>
+            <property name="vexpand">False</property>
+            <property name="image">icon_fflag_reset_button</property>
+            <property name="image_position">right</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">1</property>
+          </packing>
         </child>
         <child>
           <placeholder/>
