--- a/src/grapejuice_common/assets/glade/fast_flag_editor.glade
+++ b/src/grapejuice_common/assets/glade/fast_flag_editor.glade
@@ -40,7 +40,7 @@
         </child>
         <child>
           <object class="GtkButton">
-            <property name="label" translatable="yes">Delete changes</property>
+            <property name="label" translatable="yes">Delete flags</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
