Make sure people know it resets *all*

--- a/src/grapejuice_common/assets/glade/fast_flag_editor.glade
+++ b/src/grapejuice_common/assets/glade/fast_flag_editor.glade
@@ -27,7 +27,7 @@
         </child>
         <child>
           <object class="GtkButton">
-            <property name="label" translatable="yes">Reset</property>
+            <property name="label" translatable="yes">Reset all</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
