--- a/src/grapejuice_common/assets/glade/fast_flag_editor.glade
+++ b/src/grapejuice_common/assets/glade/fast_flag_editor.glade
@@ -9,6 +9,7 @@
     <property name="window_position">center</property>
     <property name="default_width">550</property>
     <property name="default_height">300</property>
+    <property name="icon">../grapejuice.svg</property>
     <child type="titlebar">
       <object class="GtkHeaderBar" id="fast_flag_editor_header">
         <property name="visible">True</property>
