--- a/src/grapejuice_common/assets/glade/about.glade
+++ b/src/grapejuice_common/assets/glade/about.glade
@@ -4,6 +4,7 @@
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkAboutDialog" id="grapejuice_about">
     <property name="can_focus">False</property>
+    <property name="icon">../icons/hicolor/scalable/apps/grapejuice.svg</property>
     <property name="type_hint">dialog</property>
     <property name="program_name">Grapejuice</property>
     <property name="version">version_string</property>
@@ -12,7 +13,7 @@
     <property name="license" translatable="yes">This program comes with absolutely no warranty.
 See the &lt;a href="https://www.gnu.org/licenses/gpl-3.0.html"&gt;GNU General Public Licence, version 3 or later&lt;/a&gt; for details.</property>
     <property name="authors">BrinkerVII &lt;brinkervii@gmail.com&gt;</property>
-    <property name="logo">../grapejuice-128.png</property>
+    <property name="logo">../icons/hicolor/128x128/apps/grapejuice.png</property>
     <property name="wrap_license">True</property>
     <property name="license_type">gpl-3-0</property>
     <signal name="close" handler="close_about" swapped="no"/>
