--- a/src/grapejuice_common/assets/glade/fast_flag_warning.glade
+++ b/src/grapejuice_common/assets/glade/fast_flag_warning.glade
@@ -4,7 +4,7 @@
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkWindow" id="fast_flag_warning">
     <property name="can_focus">False</property>
-    <property name="icon">../grapejuice.svg</property>
+    <property name="icon">../icons/hicolor/scalable/apps/grapejuice.svg</property>
     <signal name="destroy" handler="on_close" swapped="no"/>
     <child type="titlebar">
       <object class="GtkHeaderBar">
