--- a/src/grapejuice_common/assets/glade/fast_flag_editor.glade
+++ b/src/grapejuice_common/assets/glade/fast_flag_editor.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.22.1 -->
+<!-- Generated with glade 3.22.2 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkWindow" id="fast_flag_editor">
@@ -9,7 +9,7 @@
     <property name="window_position">center</property>
     <property name="default_width">550</property>
     <property name="default_height">300</property>
-    <property name="icon">../icons/hicolor/scalable/apps/grapejuice.svg</property>
+    <property name="icon_name">grapejuice</property>
     <child type="titlebar">
       <object class="GtkHeaderBar" id="fast_flag_editor_header">
         <property name="visible">True</property>
