--- a/src/grapejuice_common/assets/glade/fast_flag_warning.glade
+++ b/src/grapejuice_common/assets/glade/fast_flag_warning.glade
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.22.1 -->
+<!-- Generated with glade 3.22.2 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkWindow" id="fast_flag_warning">
     <property name="can_focus">False</property>
-    <property name="icon">../icons/hicolor/scalable/apps/grapejuice.svg</property>
+    <property name="icon_name">grapejuice</property>
     <signal name="destroy" handler="on_close" swapped="no"/>
     <child type="titlebar">
       <object class="GtkHeaderBar">
