--- a/src/grapejuice_common/assets/glade/grapejuice.glade
+++ b/src/grapejuice_common/assets/glade/grapejuice.glade
@@ -282,6 +282,7 @@
                         <property name="margin_top">5</property>
                         <property name="margin_bottom">5</property>
                         <property name="image">icon_update</property>
+                        <signal name="clicked" handler="update_grapejuice" swapped="no"/>
                       </object>
                       <packing>
                         <property name="expand">False</property>
